Optimized code Fixed binkw32.dll copy in console mode Removed additional path ask in console mode

--- a/src/main/resources/style/oxygen.css
+++ b/src/main/resources/style/oxygen.css
@@ -27,6 +27,8 @@
 
 #window-title {
     -fx-text-fill: #abfff1;
+    -fx-font-family: "Sansation Regular";
+    -fx-font-size: 24px;
 }
 
 #button-activated {
